--- a/style.css
+++ b/style.css
@@ -4,18 +4,41 @@
   box-sizing: border-box;
   outline: none;
   transition: 0.2s;
+  user-select: none;
 }
-
+html {
+  font-size: 18px;
+}
 body {
   height: 100vh;
   background-image: linear-gradient(
     to right top,
-    #051937,
+    #5d7eaf,
     #133660,
     #1d578d,
     #1f7abb,
     #12a0eb
   );
+  background-size: 500% 100%;
+  animation: bg 20s infinite;
+}
+
+@keyframes bg {
+  0%,
+  100% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+    background-image: linear-gradient(
+      to right top,
+      #939496,
+      #133660,
+      #1d578d,
+      #1f7abb,
+      #12a0eb
+    );
+  }
 }
 .parent {
   width: 100%;
@@ -33,8 +56,10 @@ body {
   outline: none;
 }
 .parent input {
-  height: 3rem;
-  width: 15rem;
+  /* height: 3rem; */
+  /* width: 15rem; */
+  height: 1rem;
+  width: 1rem;
   border-radius: 1rem;
   border: none;
   margin-top: 1rem;
@@ -62,27 +87,17 @@ body {
   box-shadow: 1px 1px 10px 0px #12a0eb;
   cursor: pointer;
   background: #12a0eb;
-  animation: Npath 5s infinite;
+  animation: path 5s infinite;
+  outline-offset: 2rem;
 }
 
 @keyframes path {
   0%,
   100% {
-    clip-path: 0;
-    rotate: 0;
+    background: #12a0eb;
   }
   50% {
-    clip-path: polygon(
-      40% 0%,
-      40% 20%,
-      100% 0,
-      100% 100%,
-      40% 80%,
-      40% 100%,
-      0% 50%
-    );
-    rotate: -90deg;
-    width: 5rem;
+    background: #051937;
   }
 }
 .icons {
@@ -97,19 +112,18 @@ body {
   color: #12a0eb;
   cursor: pointer;
 }
-
-@media only screen and (max-width:500px) {
-  html{
+@media only screen and (max-width: 500px) {
+  html {
     font-size: 12px;
   }
 }
-@media only screen and (min-width:768px) {
-  html{
+@media only screen and (min-width: 768px) {
+  html {
     font-size: 16px;
   }
 }
-@media only screen and (min-width:1770px) {
-  html{
+@media only screen and (min-width: 1770px) {
+  html {
     font-size: 20px;
   }
 }
